feat: new endpoint to get Player by Squad Number
